@@ -4,9 +4,20 @@ import com.restaurant.quanlydatbannhahang.dao.KhachHangDAO;
 import com.restaurant.quanlydatbannhahang.entity.KhachHang;
 
 import java.util.List;
+import java.util.regex.Pattern;
 
 public class KhachHangService {
     private KhachHangDAO khachHangDAO;
+
+    private static final String PHONE_PATTERN = "^0[1-9]\\d{8}$";
+    // \p{Lu}: Bất kỳ chữ cái Unicode nào ở dạng VIẾT HOA
+    // \p{Ll}: Bất kỳ chữ cái Unicode nào ở dạng VIẾT THƯỜNG
+    private static final String HOTEN_PATTERN = "^[\\p{Lu}][\\p{Ll}]*(\\s[\\p{Lu}][\\p{Ll}]*)*$";
+    private static final String MAKH_PATTERN = "^KH\\d{3}$";
+
+    private static final Pattern phonePattern = Pattern.compile(PHONE_PATTERN);
+    private static final Pattern hoTenPattern = Pattern.compile(HOTEN_PATTERN);
+    private static final Pattern maKHPattern = Pattern.compile(MAKH_PATTERN);
 
     public KhachHangService() {
         this.khachHangDAO = new KhachHangDAO();
@@ -16,9 +27,14 @@ public class KhachHangService {
      * Lấy khách hàng theo mã
      */
     public KhachHang getKhachHangTheoMa(String maKH) {
-        if (maKH == null || maKH.trim().isEmpty()) {
+        if (maKH == null || maKH.isBlank()) {
             throw new IllegalArgumentException("Mã khách hàng không được để trống");
         }
+        
+        if (!maKHPattern.matcher(maKH).matches()) {
+            throw new IllegalArgumentException("Mã khách hàng phải có dạng KHxxx (ví dụ: KH001)");
+        }
+        
         KhachHang khachHang = khachHangDAO.getKhachHangTheoMa(maKH);
         if (khachHang == null) {
             System.out.println(" Không tìm thấy khách hàng với mã: " + maKH);
@@ -37,15 +53,8 @@ public class KhachHangService {
      * Thêm khách hàng mới
      */
     public boolean themKhachHang(KhachHang khachHang) {
-        if (khachHang == null) {
-            throw new IllegalArgumentException("Khách hàng không được để trống");
-        }
-        if (khachHang.getMaKH() == null || khachHang.getMaKH().trim().isEmpty()) {
-            throw new IllegalArgumentException("Mã khách hàng không được để trống");
-        }
-        if (khachHang.getHoTen() == null || khachHang.getHoTen().trim().isEmpty()) {
-            throw new IllegalArgumentException("Họ tên không được để trống");
-        }
+       validateKhachHang(khachHang);
+       
         boolean success = khachHangDAO.themKhachHang(khachHang);
         if (success) {
             System.out.println(" Thêm khách hàng thành công");
@@ -55,13 +64,51 @@ public class KhachHangService {
         return success;
     }
 
+
+   
+
+    
+    public void validateKhachHang(KhachHang kh) {
+        if (kh == null) {
+            throw new IllegalArgumentException("Đối tượng khách hàng không tồn tại");
+        }
+        
+        if (kh.getMaKH() == null || kh.getMaKH().isBlank()) {
+            throw new IllegalArgumentException("Mã khách hàng không được để trống");
+        }
+        if (!maKHPattern.matcher(kh.getMaKH()).matches()) {
+            throw new IllegalArgumentException("Mã khách hàng phải có dạng KHxxx (ví dụ: KH001)");
+        }
+        
+        if (kh.getHoTen() == null || kh.getHoTen().isBlank()) {
+            throw new IllegalArgumentException("Họ tên khách hàng không được để trống");
+        }
+        if (!hoTenPattern.matcher(kh.getHoTen()).matches()) {
+            throw new IllegalArgumentException("Tên khách hàng phải viết hoa chữ cái đầu mỗi từ");
+        }
+        
+        if (kh.getSdt() == null || kh.getSdt().isBlank()) {
+            throw new IllegalArgumentException("Số điện thoại không được để trống");
+        }
+        if (!phonePattern.matcher(kh.getSdt()).matches()) {
+            throw new IllegalArgumentException("Số điện thoại không hợp lệ (phải 10 số và bắt đầu bằng 0)");
+        }
+        
+        if (kh.getDiemTichLuy() < 0) {
+            throw new IllegalArgumentException("Điểm tích lũy không được là số âm");
+        }
+        
+        if (kh.getLoaiThanhVien() == null) {
+            throw new IllegalArgumentException("Vui lòng chọn loại thành viên");
+        }
+        
+    }
+    
     /**
      * Cập nhật khách hàng
      */
     public boolean capNhatKhachHang(KhachHang khachHang) {
-        if (khachHang == null) {
-            throw new IllegalArgumentException("Khách hàng không được để trống");
-        }
+        validateKhachHang(khachHang);
         boolean success = khachHangDAO.capNhatKhachHang(khachHang);
         if (success) {
             System.out.println(" Cập nhật khách hàng thành công");
@@ -75,8 +122,11 @@ public class KhachHangService {
      * Xóa khách hàng
      */
     public boolean xoaKhachHang(String maKH) {
-        if (maKH == null || maKH.trim().isEmpty()) {
+    	if (maKH == null || maKH.isBlank()) {
             throw new IllegalArgumentException("Mã khách hàng không được để trống");
+        }
+        if (!maKHPattern.matcher(maKH).matches()) {
+            throw new IllegalArgumentException("Mã khách hàng phải có dạng KHxxx (ví dụ: KH001)");
         }
         boolean success = khachHangDAO.xoaKhachHang(maKH);
         if (success) {
@@ -91,8 +141,11 @@ public class KhachHangService {
      * Lấy khách hàng theo số điện thoại
      */
     public KhachHang getKhachHangTheoSDT(String sdt) {
-        if (sdt == null || sdt.trim().isEmpty()) {
+        if (sdt == null || sdt.trim().isBlank()) {
             throw new IllegalArgumentException("Số điện thoại không được để trống");
+        }
+        if (!phonePattern.matcher(sdt).matches()) {
+            throw new IllegalArgumentException("Số điện thoại không hợp lệ (phải 10 số và bắt đầu bằng 0)");
         }
         return khachHangDAO.getKhachHangTheoSDT(sdt);
     }
